--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@reduxjs/toolkit": "^2.2.6",
+    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
     "next": "14.1.4",
