--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "preline": "^2.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
