--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "CommonJS",
-    "moduleResolution": "bundler",
+    "module": "commonjs",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -22,8 +21,6 @@
       "@/*": ["./*"],
       "@hooks/*": ["./app/hooks/*"],
       "@utils/*": ["./app/utils/*"],
-      "@/app/*": ["./app/*"]
-      
     }
   },
   "include": [".", "next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "@testing-library/jest-dom"],
