--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,10 @@
       "@/*": ["./*"],
       "@hooks/*": ["./app/hooks/*"],
       "@utils/*": ["./app/utils/*"],
+      "@components/*": ["./app/components/*"],
+      "@pages/*": ["./app/(pages)/*"],
+      "@store/*": ["./app/store/*"],
+
     }
   },
   "include": [".", "next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "@testing-library/jest-dom"],
