--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "plugins": [
       {
         "name": "next"
@@ -26,19 +26,19 @@
         "./*"
       ],
       "@hooks/*": [
-        "app/hooks/*"
+        "./app/hooks/*"
       ],
       "@utils/*": [
-        "app/utils/*"
+        "./app/utils/*"
       ],
       "@components/*": [
-        "app/components/*"
+        "./app/components/*"
       ],
       "@pages/*": [
-        "app/(pages)/*"
+        "./app/(pages)/*"
       ],
       "@store/*": [
-        "app/store/*"
+        "./app/store/*"
       ]
     },
     "moduleResolution": "node"
@@ -48,6 +48,10 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "**/**/*.ts",
+    "**/**/*.tsx",
+    "**/**/**/*.tsx",
+    "**/**/**/*.ts",
     ".next/types/**/*.ts",
     "@testing-library/jest-dom"
   ],
