--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@heroicons/react": "^2.1.3",
     "@reduxjs/toolkit": "^2.2.6",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
